<resources>
    <string name="app_name">Mobile Firebase</string>

    <string name="textview_welcome">Bienvenido</string>
    <string name="textview_register">Registrate</string>

    <string name="button_login">Ingresar</string>
    <string name="button_register">Registrar</string>

    <string name="edittext_name_hint">Nombre</string>
    <string name="edittext_lastname_hint">Apellido</string>
    <string name="edittext_email_hint">Email</string>
    <string name="edittext_username_hint">Nombre de Perfil</string>
    <string name="edittext_password_hint">Contraseña</string>
    <string name="edittext_borndate_hint">Fecha de Nacimiento</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="alert_title_error">Error!</string>
    <string name="alert_button_accept">Aceptar</string>

    <string name="error_invalid_email">Email Invalido</string>
    <string name="error_invalid_password">Password Invalida</string>
    <string name="error_blank_email">Ingrese su email</string>
    <string name="error_blank_password">Ingrese su contraseña</string>
    <string name="error_blank_first_name">Ingrese su nombre</string>
    <string name="error_blank_last_name">Ingrese su apellido</string>
    <string name="error_blank_user_name">Ingrese un nombre de usuario</string>
    <string name="error_weak_password">Password demasiado debil</string>
    <string name="error_user_exists">Este correo ya se encuentra registrado</string>
    <string name="error_user_not_exists">Este correo no se encuentra registrado</string>
</resources>