<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:clickable="true"
    android:background="@color/app.primary"
    tools:context="cl.mzapatae.mobileFirebase.fragments.LoginFragment">

    <TextView
        android:id="@+id/text_title"
        android:text="@string/textview_welcome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:textColor="@color/font.light.primary"
        android:textAppearance="@style/TextAppearance.AppCompat.Headline"
        android:fontFamily="sans-serif"
        android:textSize="24sp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <android.support.design.widget.TextInputLayout
        android:id="@+id/edit_layout_email"
        android:layout_width="270dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_title"
        app:layout_constraintLeft_toLeftOf="parent">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/edit_email"
            android:layout_width="270dp"
            android:layout_height="wrap_content"
            android:hint="@string/edittext_email_hint"
            android:inputType="textEmailAddress"
            android:ems="10" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/edit_layout_password"
        android:layout_width="270dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        app:layout_constraintRight_toRightOf="@+id/edit_layout_email"
        app:layout_constraintTop_toBottomOf="@+id/edit_layout_email"
        app:layout_constraintLeft_toLeftOf="@+id/edit_layout_email">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/edit_password"
            android:layout_width="270dp"
            android:layout_height="wrap_content"
            android:hint="@string/edittext_password_hint"
            android:inputType="textPassword"
            android:ems="10" />
    </android.support.design.widget.TextInputLayout>



    <Button
        android:id="@+id/button_login"
        android:text="@string/button_login"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="48dp"
        android:layout_width="180dp"
        android:layout_height="60dp" />




</android.support.constraint.ConstraintLayout>
